tests/baselines/reference/ambientEnumElementInitializer3.errors.txt
==== tests/cases/compiler/ambientEnumElementInitializer3.ts (1 errors) ====
    declare enum E {
     e = 3.3 // Decimal
         ~~~
!!! ambientEnumElementInitializer3.ts(2,6): error TS1066: Ambient enum elements can only have integer literal initializers.
    }